--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,117 @@
   padding: 20px;
   width: 50%;
 }
+
+
+.loginbtn{
+  width: 45%;
+  padding: 15px o !important;
+  border-radius: 50px !important;
+  margin-top: 20px !important;
+  text-align: center;
+}
+
+
+.sidebar{
+  background: #5F35F5;
+  width: 85%;
+  height: 95vh;
+  margin: auto;
+  margin-top: 2.5vh;
+  padding: 38px 0;
+  text-align: center;
+}
+
+.sidebarimg{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+
+.sidebar h1{
+  color: white;
+  font-size: 16px;
+}
+
+.sidebar ul li{
+  margin: 42px;
+  list-style: none;
+}
+
+.sidebar .icon{
+ color: #fff;
+  font-size: 30px;
+}
+
+.icon {
+  color: #fff;
+  font-size: 30px;
+}
+
+
+.active{
+  position: relative;
+  z-index: 2;
+}
+
+.active .icon{
+  color: #5F35F5;
+}
+
+.active:before{
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -25px;
+  width: 151px;
+  height: 55px;
+  background: #fff;
+  z-index: -1;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+
+}
+
+.active:after{
+  content: "";
+  position: absolute;
+  top: -10px;
+  right: -42px;
+  width: 11px;
+  height: 55px;
+  background:#5F35F5;
+  z-index: -1;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.box{
+  width: 100%;
+  height: 49vh;
+  background-color:#fff;
+  margin-top: 2.5vh;
+  border-radius: 20px;
+  padding: 20px;
+  box-sizing: border-box;
+  overflow-y: scroll;
+  -webkit-box-shadow: 0px 0px 23px 11px rgba(0,0,0,0.2);
+-moz-box-shadow: 0px 0px 23px 11px rgba(0,0,0,0.2);
+box-shadow: 0px 0px 23px 11px rgba(0,0,0,0.2);
+
+
+}
+
+.list{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-bottom: 2px solid black;
+  padding-bottom: 10px;
+  margin: 10px 0;
+}
+
+
+.list:last-child{
+  border-bottom: 0;
+}
